dropshot/tests/fail/bad_channel24.stderr
error: channel handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               websocket_connection: dropshot::WebsocketConnection,
           ) -> dropshot::WebsocketChannelResult
  --> tests/fail/bad_channel24.rs:23:1
   |
23 | / async extern "ABI" fn abi_endpoint(
24 | |     _rqctx: RequestContext<()>,
25 | |     _param1: Query<QueryParams>,
26 | |     _upgraded: WebsocketConnection,
27 | | ) -> dropshot::WebsocketChannelResult {
   | |_____________________________________^

error: endpoint `abi_endpoint` must not use an alternate ABI
  --> tests/fail/bad_channel24.rs:23:7
   |
23 | async extern "ABI" fn abi_endpoint(
   |       ^^^^^^^^^^^^
